# pgsqlite

./: "file::memory:?cache=shared&uri=true"  .dockerignore  .gitignore  BINARY_FORMAT_PERFORMANCE_FINAL.md  BINARY_FORMAT_SUMMARY.md  BINARY_SELECT_OPTIMIZATION.md  CHANGELOG.md  CLAUDE.md  CLEANUP_CONNECTION_FIX_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  DML_BINARY_PERFORMANCE_ANALYSIS.md  DML_BINARY_PERFORMANCE_FIX_SUMMARY.md  Dockerfile  FIX_SUMMARY.md  README.md  TODO.md  benchmark_test.db  benchmark_test.db-shm  benchmark_test.db-wal  docker-compose.twenty-postgres.yml  docker-compose.yml  docker-entrypoint.sh  release.sh  run_all_driver_tests.sh  run_failing_test.sh  run_ssl_tests.sh  test.db-shm  test.db-wal  test_alter_type.sql  test_alter_type_invalid.sql  test_cast_debug.py  test_cast_detection.py  test_catalog.db  test_catalog.sql  test_catalog_simple.py  test_concurrent_debug.py  test_datetime_binary.py  test_datetime_insert.py  test_debug_bad_param.py  (+29 more)
benches/: simple_query_bench.rs
benchmarks/: BINARY_FORMAT_PERFORMANCE_FINAL.md  COMPLETE_OPTIMIZATION_SUMMARY.md  PREPARED_STATEMENT_CACHE_RESULTS.md  README.md  WAL_OPTIMIZATION_RESULTS.md  benchmark.py  benchmark_array_binary.py  benchmark_drivers.py  benchmark_final.db  benchmark_test.db  benchmark_test.db-shm  (+56 more)
tests/django_app/: comprehensive_test.sh  pyproject.toml  quick_comprehensive_test.sh  quick_test.sh  run_test.sh
tests/django_app/books/: models.py  serializers.py  urls.py  views.py
tests/django_app/books/migrations/: 0001_initial.py
tests/django_app/testproject/: settings.py  urls.py
(+384 files in other folders)
